add projectScore in getStudentPerFormance